welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:9: error: ';' expected but 'else' found.
     	else{
        ^SlugTracking:18: error: Unmatched closing brace '}' ignored here
}
^